Added more functionality.