@@ -1,9 +1,8 @@
 package com.falconxrobotics.discordbot.commands;
 
 import java.awt.Color;
-import java.util.ArrayDeque;
+import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.Map;
 
 import com.github.raybipse.components.Command;
@@ -16,25 +15,29 @@ import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
  */
 public class Last extends Command {
 
-    private Map<Long, ArrayDeque<MessageReceivedEvent>> lastMessageEvents = new HashMap<Long, ArrayDeque<MessageReceivedEvent>>();
+    private Map<Long, ArrayList<MessageReceivedEvent>> lastMessageEvents = new HashMap<Long, ArrayList<MessageReceivedEvent>>();
 
     public Last() {
         super("Last", "last");
         setDescription("Gets the last messages sent in the channel, including deleted messages.");
-        addExamples("2", "");
-        setSyntax("[optional: number of messages; max: 10]");
+        addExamples("2", "2 4", "");
+        setSyntax("[optional: number of messages; max: 50] OR [start] [end]");
     }
 
     @Override
     public void onMessageReceived(MessageReceivedEvent event) {
         long channelId = event.getChannel().getIdLong();
-        ArrayDeque<MessageReceivedEvent> pastEvents = lastMessageEvents.getOrDefault(channelId, new ArrayDeque<MessageReceivedEvent>(11));
-        pastEvents.push(event);
+        ArrayList<MessageReceivedEvent> pastEvents = lastMessageEvents.getOrDefault(channelId, new ArrayList<MessageReceivedEvent>(11));
+        pastEvents.add(0, event);
         lastMessageEvents.put(channelId, pastEvents);
-        if (lastMessageEvents.get(channelId).size() > 10) {
-            lastMessageEvents.get(event.getChannel().getIdLong()).removeLast();
+        if (lastMessageEvents.get(channelId).size() > 50) {
+            lastMessageEvents.get(event.getChannel().getIdLong()).remove(lastMessageEvents.size() - 1);
         }
 
+        for (MessageReceivedEvent e : pastEvents) {
+            System.out.println(e.getMessage().getContentDisplay());
+        }
+        
         String messageContent = event.getMessage().getContentDisplay();
         if (event.getAuthor().isBot())
             return;
@@ -44,13 +47,20 @@ public class Last extends Command {
         messageContent = trimInputBeginning(messageContent);
         String[] args = splitUserInput(messageContent);
         try {
-            int n = args.length < 1 ? 1 : Integer.parseInt(args[0]);
-            if (n < 0) {
-                event.getChannel().sendMessage(getEmbedInvalidParameterError("Argument cannot be less than 1").build())
+            int start = 0;
+            int end = 1;
+            if (args.length == 1) {
+                end = Integer.parseInt(args[0]);
+            } else if (args.length > 1) {
+                start = Integer.parseInt(args[0]);
+                end = Integer.parseInt(args[1]);
+            }
+            if (start < 0 || end < 0) {
+                event.getChannel().sendMessage(getEmbedInvalidParameterError("Arguments cannot be less than 1").build())
                         .queue();
-            } else if (n > 10) {
+            } else if (end > 50) {
                 event.getChannel()
-                        .sendMessage(getEmbedInvalidParameterError("Argument cannot be bigger than than 10").build())
+                        .sendMessage(getEmbedInvalidParameterError("Argument cannot be bigger than than 50").build())
                         .queue();
             } else if (lastMessageEvents.get(channelId).size() < 2) {
                 event.getChannel()
@@ -59,17 +69,14 @@ public class Last extends Command {
             } else {
                 EmbedBuilder builder = new EmbedBuilder()
                     .setColor(Color.ORANGE);
-                Iterator<MessageReceivedEvent> iter = lastMessageEvents.get(channelId).iterator();
-                iter.next();
-                for (int i = 0; i < n && iter.hasNext(); i++) {
-                    MessageReceivedEvent lastEvent = iter.next();
+                for (int i = end; i >= start && i < lastMessageEvents.get(channelId).size() && i != 0; i--) {
+                    MessageReceivedEvent lastEvent = lastMessageEvents.get(channelId).get(i);
                     if (lastEvent != null)
                         builder.addField(
-                                i + 1 + ". " + lastEvent.getAuthor().getName() + "#"
+                                i + ". " + lastEvent.getAuthor().getName() + "#"
                                         + lastEvent.getAuthor().getDiscriminator() + ":",
                                 lastEvent.getMessage().getContentDisplay(), false);
                 }
-
                 event.getChannel().sendMessage(builder.build()).queue();
             }
         } catch (NumberFormatException nfe) {
